--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "type": "module",
+  "main": "NodeJs/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "cors": "^2.8.5",
